--- a/my-app/src/components/Jumbotron/style.css
+++ b/my-app/src/components/Jumbotron/style.css
@@ -1,5 +1,7 @@
 .jumbotron{
-    background-image: url(../../images/jumbo1.jpg);
+    background-image: url("./jumbo1.jpg");
     background-size: contain;
+    background-position: 50%;
     color: goldenrod;
+    /* margin-top: 60px; */
 }
